# bevy_prototype_particles

./: Cargo.toml  README.md
examples/: entities.rs  rendering.rs  simple.rs  trails.rs
src/: curve.rs  emitter.rs  lib.rs  material.rs  modifiers.rs  particle.frag  particle.vert  particle.wgsl  particles.rs  render.rs  rendering.rs
src/modifiers/: mod.rs
