[package]
name = "bevy_prototype_particles"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8"

[dependencies.bevy]
git = "https://github.com/james7132/bevy"
branch = "buffer-vec"
default-features = false
features = ["render", "bevy_render2"]

[dev-dependencies.bevy]
git = "https://github.com/james7132/bevy"
branch = "buffer-vec"
default-features = true
features = ["render", "bevy_render2"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "entities"
path = "examples/entities.rs"
