[package]
name = "bevy_prototype_particles"
version = "0.1.0"
authors = ["james7132 <contact@jamessliu.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
rand = "0.8"
wgpu = "0.9"
wgpu-types = "0.9"
bytemuck = { version = "1.7.0", features = ["derive"] }
bitflags = "1.2"

[profile.release]
opt-level = 3

[dependencies.bevy]
git = "https://github.com/james7132/bevy"
branch = "buffer-vec-fix"
default-features = false
features = ["render", "bevy_render2"]

[dependencies.crevice]
git = "https://github.com/james7132/bevy"
branch = "buffer-vec-fix"

[dev-dependencies.bevy]
git = "https://github.com/james7132/bevy"
branch = "buffer-vec-fix"
default-features = true
features = ["render", "bevy_render2"]

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "entities"
path = "examples/entities.rs"

[[example]]
name = "rendering"
path = "examples/rendering.rs"